--- a/style.css
+++ b/style.css
@@ -95,3 +95,31 @@ body {
     background-color: #FAF6F0;
     background-repeat: no-repeat;
 }
+
+.content{
+    color: black;
+    text-align: center;
+}
+
+.content h1{
+    margin-top: 100px;
+    font-size: 55px;
+}
+
+.form input{
+    width: 500px;
+    height: 30px;
+    border-radius: 20px;
+    background: hwb(0 100% 0% / 0.418);
+}
+
+.form button{
+    border: none;
+    width: 100px;
+    height: 36px;
+    margin-left: -5px;
+    border-radius: 20px;
+    font-size: 16px;
+    background-color: #B4BDFF;
+    color: white;
+}
